syntax = "proto3";
option go_package = "..grpc_pb/;grpc_pb";
package saasdb;


/* 定义 show processlist需要的消息 */
message ShowProcesslistRequest {
  string MySQLIP = 1;
  int32 MySQLPort = 2;
}

/* 定义 stop processlist需要的消息 */
message StopProcessRequset{
  string MySQLIP = 1;
  int32  MySQLPort = 2 ;
  int32  ProcessId = 3;
}

/* 定义 show processlist返回的消息 */
message ShowProcesslistResponce {
  repeated ProcessListInfo ProcessListInfo = 1;
}

/* 定义 stop processlist返回的消息 */
message StopProcessResponse{
  int32 IsSuccess = 1;
  string MoreDetailedInformation = 2;
}


message ProcessListInfo {
  uint32 ID = 1;
  string USER = 2;
  string HOST = 3;
  string DB = 4;
  string COMMAND = 5;
  uint32 TIME = 6;
  string STATE = 7;
  string INFO = 8;
}

/*      定义processlist返回的消息         */
service MySQLShowProcessListService{
  rpc NewShowProcesslist(ShowProcesslistRequest) returns (ShowProcesslistResponce){};
}
/*      定义processlist返回的消息         */
service MySQLStopProcessService{
  rpc NewStopProcess(StopProcessRequset) returns (StopProcessResponse){};
}
